# Uminho

BD/part1/: EER_Model.mwb  createScript.sql  modelo_concetual.xml  popScript.sql  queries.sql  transactions.sql
BD/part2/: contacts.csv  createGraphs.txt  editions.csv  events.csv  migrateScript.sql  orgs.csv  orgsEvents.csv  persons.csv  personsEditions.csv  photos.csv
CG/Fase 1/: F1-Relatorio.docx  README.txt
CG/Fase 2/: CMakeLists.txt  README.txt  relatorio.docx
CG/Fase 3/: README.txt
CG/Fase 4/Engine/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  cubicCurves.cpp  cubicCurves.h  directionalLight.cpp  directionalLight.h  frustumCulling.cpp  frustumCulling.h  glOperation.h  light.cpp  light.h  main.cpp  plane.cpp  plane.h  pointLight.cpp  pointLight.h  popMatrix.h  pushMatrix.h  rotation.cpp  rotation.h  scale.cpp  scale.h  spotLight.cpp  spotLight.h  translation.cpp  translation.h  trianglesDrawing.cpp  trianglesDrawing.h  tripleFloat.cpp  tripleFloat.h  xmlParser.cpp
CG/Fase 4/Engine/Engine/demos/: allmodels.xml  asteroid.3d  box.3d  box.xml  boxdiv.3d  boxdiv.xml  cockpit.3d  cone.3d  cone.xml  invalidModels.xml  invalidTranslate.xml  lighthouse.xml  plane.3d  plane.xml  scaledModels.xml  solarSystem.xml  solarSystem2.xml  sphere.3d  sphere.xml  teapot.3d  teapot.xml  tiefighter.3d  tiefighter.xml  wing.3d
CP/: cp1415t  cp1415t.lhs  cp1415t.tex  pyr.html  readme.txt
DSS/: createScript.sql  modeloLogico.mwb  popScript.sql
LI1/: makefile  readme.txt
LI3/C/: main.c  (+21 more)
SO/: installScript  makefile  sobucli  sobucli.c  sobusrv  sobusrv.c
(+636 files in other folders)
